# manim-recorder

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py
example/: Example_1.ipynb  gui-example.py  gui_example.py  gui_example_1.py  gui_example_2.py  recorder-example.py  termux-example.py  web-example.py
manim_recorder/: __init__.py  __main__.py  defaults.py  helper.py  modify_audio.py  multimedia.py  player.py  tracker.py  voiceover_scene.py
manim_recorder/recorder/: base.py
manim_recorder/recorder/gui/: __gui__.py  __init__.py  config.py  ui.py  util.py
manim_recorder/recorder/pynput/: __init__.py  cli.py
manim_recorder/recorder/server/: __init__.py  app.py  index.html
manim_recorder/recorder/server/static/: script.js
manim_recorder/recorder/termux/: __init__.py  cli.py
temp/: app.py
tests/: gui_test.py  test_001.py
