[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "manim_recorder"
authors = [{ name = "AvN Learn", email = "avnlearn@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.5"
dependencies = ["manim", "sox", "pydub", "mutagen", "pyaudio"]
